wrote remoteConnectionStatus endpoint. added ConnectionStatus method to orchestrator/session. documented endpoint in swagger. (#144)
